# fedwatch

./: HMM_WALKTHROUGH.md  README.md  lead_lag_spx_hmm.csv  macro_regime 분석 가이드.md  pyproject.toml  requirements.txt  supabase_schema.sql  supabase_schema_daily.sql  test.ipynb  test2.ipynb  test3.ipynb  update_nb.py
.github/workflows/: macro_pipeline.yml  macro_pipeline_daily.yml  macro_to_supabase.yml
models/: hmm_v1.npz  hmm_v1_A2_B1p3_fsi.npz  hmm_v1_A2_fsi.npz  hmm_v1_base.npz  hmm_v1_base_fsi.npz
scripts/: fetch_and_store.py  pipeline.py  pipeline_daily.py  query_macro_regime.py  train_hmm.py
