[project]
name = "fedwatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "jax>=0.4.34,<0.5",
    "jaxlib>=0.4.34,<0.5",
    "numpy>=1.26,<2.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "numpyro>=0.15.0,<0.16",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "supabase>=2.27.2",
    "yfinance>=1.0",
    "arviz>=0.23.1",
]
